impr: simplify blog hub layout
Cleaner, shorter descriptions and more emphasis on the dates

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -98,12 +98,11 @@ works and is after the sidebar */
     left: 0;
 }
 
-.tag::before {
+.post-tag::before {
     content: "#";
 }
 
-.tag {
-    margin: inherit;
+.post-tag {
     font-weight: bold;
 }
 
