--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,9 +1,26 @@
-.post {
-    margin-bottom: 4em;
-    border-left: var(--border-thickness) solid var(--current-text-color);
-    padding-left: 2em;
+#posts-list {
+    margin-top: 2rem;
 }
 
-.post-content {
-    font-style: italic;
+.post {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    padding-bottom: 3rem;
+    column-gap: 2em;
+}
+
+.post-header h3 {
+    margin: 0 0 0.25rem 0;
+}
+
+#posts-list .post-header a {
+    font-family: var(--regular-font);
+}
+
+.post-header h3::before {
+    content: "";
+}
+
+.post-tag {
+    display: inline-block;
 }
