fix: added sidebar in projects

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -28,6 +28,14 @@
 	<body>
 		{% include themes-inputs.html %}
 		<div id="view">
+			<details id="mobile-sidebar-toggle">
+				<summary>
+					<span>navigation</span>
+				</summary>
+			</details>
+			<details open="" id="desktop-sidebar-toggle">
+				<summary></summary>
+			</details>
 			<div id="sidebar">
 				{% include themes.html %}
 				<div id="trees-container">
