--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -135,8 +135,7 @@ li,
     font-family: var(--paragraph-font);
 }
 
-p, #content > ul, #content > ol {
-    font-size: 20px;
+#content > p, #content > ul, #content > ol {
     margin-bottom: 2em;
 }
 
