--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,6 +14,7 @@
     width: 60vw;
     border: var(--border-thickness) solid var(--current-text-color);
     padding: 3em;
+    font-size: 20px;
 }
 
 #welcome {
@@ -123,8 +124,18 @@
     }
 }
 
+#trees {
+    display: none;
+}
+
 #home-tree {
     display: none;
+}
+
+#pages {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding-left: 2em;
 }
 
 #site-info {
@@ -200,7 +211,12 @@
     }
 
     #trees {
+        display: block;
         padding: 0;
+    }
+
+    #pages {
+        display: none;
     }
 
     #other-buttons {
