feat: add ctp-webr.ing buttons
Added buttons for the catpuccin webring

--- a/_includes/site-info.html
+++ b/_includes/site-info.html
@@ -1,4 +1,9 @@
 <div id="site-info">
+    <div id="ctp-webr">
+        <a href="https://ctp-webr.ing/perseus/previous">&larr;</a>
+        <a href="https://ctp-webr.ing/">webring</a>
+        <a href="https://ctp-webr.ing/perseus/next">&rarr;</a>
+    </div>
     <a href="https://github.com/Perseus333/website">GitHub</a>
      - 
     <a href="/feed/blog.xml">RSS</a>
