--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -57,7 +57,7 @@ works and is after the sidebar */
     top: 0em;
     padding-left: 0;
     display: grid;
-    grid-template-rows: 2em auto 2em;
+    grid-template-rows: 4em auto 4em;
     row-gap: 2em;
     height: 100vh;
     max-height: 100vh;
@@ -96,6 +96,8 @@ works and is after the sidebar */
     position: relative;
     bottom: 0;
     left: 0;
+    text-align: center;
+    margin-left: -1em;
 }
 
 .post-tag::before {
