--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="{% if page.description %}{{ page.description }} {% endif %}{% assign excerpt = content | strip_html | truncate: 100, '' %}{{ excerpt }}">
 		<title>{{ page.title }}</title>
 		{% include general-style.html %}
 		{% include themes-style.html %}   
