feat: general design improvement
- new font: Bitter
- cleaner sidebar
- uniform projects
- new dim color
- smaller home title
- minor improvements

--- a/_includes/trees.html
+++ b/_includes/trees.html
@@ -1,7 +1,7 @@
 <div id="trees">
     <ul id="home-tree" class="tree">
         <details>
-            <summary><a href="/">/</a></summary>
+            <summary><a href="/">/home</a></summary>
         </details>
     </ul>
     <ul id="projects-tree" class="tree">
