--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -1,12 +1,16 @@
 #view {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    gap: 1em;
 }
 
 #content {
     width: 60ch;
     padding-top: 4em;
     padding-bottom: 8em;
+    margin: 0;
+    margin-left: 2em;
 }
 
 /* Changing order so that desktop-sidebar-toggle
@@ -23,7 +27,6 @@ works and is after the sidebar */
     order: 3;
 }
 
-
 #mobile-sidebar-toggle {
     display: none;
 }
@@ -33,13 +36,13 @@ works and is after the sidebar */
     position: sticky;
     width: 0;
     height: 0;
-    top: 1em;
-    margin-left: 1em;
-    opacity: 50%;
+    top: 4em;
+    color: var(--current-dim-color);
+    margin-left: -2em;
 }
 
 #desktop-sidebar-toggle:hover {
-    opacity: 100%;
+    color: var(--curent-text-color);
 }
 
 #desktop-sidebar-toggle > summary {
@@ -49,8 +52,6 @@ works and is after the sidebar */
 #desktop-sidebar-toggle[open] > summary {
     list-style-type: "<<";
 }
-
-
 
 #sidebar {
     position: sticky;
@@ -66,15 +67,16 @@ works and is after the sidebar */
     overflow: hidden;
     border-right: none;
     transition: max-width 250ms ease-out, min-width 250ms ease-out;
+    padding-top: 4em;
+    padding-bottom: 4em;
+    box-sizing: border-box;
 }
 
-
 #desktop-sidebar-toggle[open] ~ #sidebar {
-    padding-left: 1em;
     max-width: 20ch;
     min-width: 20ch;
     transition: max-width 250ms ease-out, min-width 250ms ease-out;
-    border-right: var(--border-thickness) solid var(--current-text-color);
+    /* border-right: var(--border-thickness) solid var(--current-text-color); */
 }
 
 #theme-menu {
@@ -96,15 +98,15 @@ works and is after the sidebar */
     position: relative;
     bottom: 0;
     left: 0;
-    text-align: center;
-    margin-left: -1em;
+    /* text-align: center; */
+    /* margin-left: -1em; */
 }
 
-.post-tag::before {
+.tag::before {
     content: "#";
 }
 
-.post-tag {
+.tag {
     font-weight: bold;
 }
 
@@ -131,10 +133,12 @@ h3 {
     font-size: 1.5em;
 }
 
-p:not(.tag),
-li,
+#content p:not(.tag),
+#content li,
 #content a {
     font-family: var(--paragraph-font);
+    font-size: var(--paragraph-font-size);
+    font-weight: 450;
 }
 
 #content > p, #content > ul, #content > ol {
