--- a/src/styles/trees.css
+++ b/src/styles/trees.css
@@ -8,12 +8,21 @@
 }
 
 #trees > ul {
-    padding-right: 2em;
+  padding-right: 2em;
+  margin-top: 0px;
+}
+
+.tree-parent li {
+  padding-bottom: 0.5em;
+}
+
+.tree a {
+  text-decoration: none;
 }
 
 #trees p {
-    margin: 0;
-    font-weight: bold;
+  margin: 0;
+  font-weight: bold;
 }
 
 summary {
@@ -25,8 +34,16 @@ details > summary {
   list-style-type: '> ';
 }
 
+#trees details > summary {
+  list-style-type: none;
+}
+
 details[open] > summary {
   list-style-type: '↪ ';
+}
+
+#trees details[open] > summary {
+  list-style-type: none;
 }
 
 details + li {
@@ -52,7 +69,7 @@ Copyright 2024 Oskar Wickström
     position: relative;
     padding-left: 0;
     list-style-type: none;
-    line-height: var(--line-height);
+    line-height: 1.5em;
   }
   .tree ul {
     margin: 0;
@@ -61,7 +78,7 @@ Copyright 2024 Oskar Wickström
     position: relative;
     padding-left: 1.5ch;
     margin-left: 1.5ch;
-    border-left: var(--border-thickness) solid var(--current-text-color);
+    border-left: var(--border-thickness) solid var(--current-dim-color);
   }
   .tree ul li:before {
     position: absolute;
@@ -70,7 +87,7 @@ Copyright 2024 Oskar Wickström
     left: 0;
     content: "";
     width: 1ch;
-    border-bottom: var(--border-thickness) solid var(--current-text-color);
+    border-bottom: var(--border-thickness) solid var(--current-dim-color);
   }
   .tree ul li:last-child {
     border-left: none;
@@ -82,7 +99,7 @@ Copyright 2024 Oskar Wickström
     left: 0;
     content: "";
     height: calc(var(--line-height) / 2);
-    border-left: var(--border-thickness) solid var(--current-text-color);
+    border-left: var(--border-thickness) solid var(--current-dim-color);
   }
 
 /*END of Wickström's code*/
