feat(test): card home layout

--- a/_includes/themes.html
+++ b/_includes/themes.html
@@ -1,6 +1,7 @@
 <div id="theme-menu">
     <details id="theme-menu-details">
-        <summary>Themes</summary>
+        <!--Change for an icon-->
+        <summary>[T]</summary>
     </details>
     <div class="details-dropdown">
         <div class="theme">
