--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,226 +1,96 @@
 #view {
     justify-items: center;
+    align-items: center;
     display: grid;
     grid-template-columns: auto 0;
+    background-color: #1a1c2a;
+}
+
+#card {
+    font-size: 16px;
+    display: grid;
+    height: 40rem;
+    width: 35rem;
+    overflow-y: hidden;
+    border-radius: 1rem;
+    grid-template-rows: 1fr 0 1fr 0 1fr;
+    background-color: var(--current-bg-color);
+    font-family: var(--regular-font), sans-serif, var(--paragraph-font);
+}
+
+#banner {
+    background-image: url("/src/assets/banner.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+}
+
+#pfp-container {
+    align-self: center;
+    margin-left: 2rem;
+    background-color: var(--current-bg-color);
+    height: 7rem;
+    aspect-ratio: 1;
+    border-radius: 100%;
+    border: 5px solid var(--current-bg-color);
+}
+
+#pfp-container > img {
+    height: 100%;
+    border-radius: 100%;
+}
+
+#contents {
+    margin-top: 4rem;
+    padding-left: 2rem;
+}
+
+#name {
+    font-weight: bold;
+}
+
+#name > h2 {
+    margin: 0;
+}
+
+#subtitle {
+    line-height: 0.75em;
+}
+
+#message {
+    margin-top: 2rem;
+    height: 2em;
+    line-height: 1.5em;
+}
+
+.separator {
+    width: 50%;
+    margin: auto;
+}
+
+#pages {
+    font-size: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 3em;
+    justify-items: center;
+    align-items: center;
+}
+
+#pages > a {
+    width: 10ch;
+    text-decoration: none;
 }
 
 #theme-menu {
     position: absolute;
-    left: 1em;
-    top: 1em;
+    top: 1rem;
+    left: 1rem;
+    color: var(--current-dim-color);
 }
 
-@keyframes expand-from-center {
-    0% {
-        max-height: 0;
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-    50% {
-        padding-top: 3em;
-        padding-bottom: 3em;
-    }
-    100% {
-        max-height: 100vh;
-        padding-top: 3em;
-        padding-bottom: 3em;
-    }
-}
-
-#content {
-    align-items: center;
-    display: grid;
-    width: 60vw;
-    max-height: 0;
-    overflow-y: hidden;
-    border: var(--border-thickness) solid var(--current-text-color);
-    /* border-radius: 20px; */
-    padding-left: 3em;
-    padding-right: 3em;
-    animation-name: expand-from-center;
-    animation-duration: 2s;
-    animation-delay: 0.2s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-}
-
-#welcome {
-    display: grid;
-    grid-template-columns: auto 1fr;
-}
-
-#message {
-    flex: 1;
-}
-
-#message > p {
-    height: calc(2 * var(--line-height))
-}
-
-#pfp-container {
-    margin-right: 2em;
-}
-
-#pfp-container img {
-    height: 11rem;
-    width: 11rem;
-}
-
-#welcome > * {
-    align-self: center;
-}
-
-#cycle-interests:after {
-    animation-name: cycle-interests;
-    animation-duration: 40s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 3s;
-    content: "";
-    color: var(--current-bg-color);
-    background-color: var(--current-text-color);
-}
-
-@keyframes cycle-interests {
-    0% {
-        content: "";
-    }
-    2% {
-        content: ".";
-        padding-left: 0.25ch;
-        padding-right: 0.25ch;
-    }
-    3% {
-        content: "..";
-    }
-    5% {
-        content: "...";
-    }
-    10% {
-        content: "on rockets";
-    }
-    15% {
-        content: "programming";
-    }
-    20% {
-        content: "doing calisthenics";
-    }
-    25% {
-        content: "typing fast";
-    }
-    30% {
-        content: "on existential crisis";
-    }
-    35% {
-        content: "creating anything";
-    }
-    40% {
-        content: "diving into rabbit holes";
-    }
-    45% {
-        content: "exploring new places";
-    }
-    50% {
-        content: "ricing my setup";
-    }
-    55% {
-        content: "learning random stuff";
-    }
-    60% {
-        content: "writing this website";
-    }
-    65% {
-        content: "conquering hill tops";
-    }
-    70% {
-        content: "planning world domination";
-    }
-    75% {
-        content: "learning about rockets";
-    }
-    80% {
-        content: "playing D&D (as DM)";
-    }
-    85% {
-        content: "finding new hobbies";
-    }
-    90% {
-        content: "journaling some days";
-    }
-    95% {
-        content: "thinking about SPQR";
-    }
-    100% {
-        content: "idling";
-    }
-}
-
-#trees {
-    display: none;
-}
-
-#home-tree {
-    display: none;
-}
-
-#pages {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    padding-left: 2em;
-}
-
-#pages > a {
-    width: fit-content;
-}
-
-#site-info {
-    position: absolute;
-    bottom: 1em;
-    left: 1em;
-}
-
-@keyframes gravity {
-    from {
-        bottom: 100vh;
-    }
-    to {
-        bottom: 0em;
-    }
-}
-
-@keyframes bounce {
-    0% {
-        rotate: 0deg;
-        bottom: 0em;
-    }
-    25% {
-        rotate: -10deg;
-        bottom: 1em;
-    }
-    50% {
-        rotate: 0deg;
-        bottom: 0em;
-    }
-    75% {
-        rotate: 10deg;
-        bottom: 1em;
-    }
-    100% {
-        rotate: 0deg;
-        bottom: 0em;
-    }
-}
-
-#javascript-free {
-    position: absolute;
-    right: 1em;
-    padding: 1em;
-    bottom: 0;
-    animation: 1s gravity cubic-bezier(.55,0,.68,.53);
-}
-
-#javascript-free:hover {
-    animation: bounce 1.25s infinite linear;
+#theme-menu summary {
+    list-style-type: none;
 }
 
 /*For mobile nerds*/
@@ -253,35 +123,4 @@
         height: 20vh;
         width: 20vh;
     }
-
-    #trees {
-        display: block;
-        padding: 0;
-    }
-
-    #pages {
-        display: none;
-    }
-
-    #other-buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    #theme-menu,
-    #site-info,
-    #javascript-free {
-        position: relative;
-        padding: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: 0;
-    }
-
 }
