--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -20,7 +20,7 @@
 }
 
 #banner {
-    background-image: url("/src/assets/banner.jpg");
+    background-image: url("/src/assets/banner-1920.webp");
     background-position: center;
     background-size: cover;
     height: 100%;
