feat: theme rework with JS
At last avoid JS became a burden greater than using JS so the simpler
option was chosen. This also allows for theme persistance which is neat.

--- a/_includes/themes.html
+++ b/_includes/themes.html
@@ -1,23 +1,22 @@
 <div id="theme-menu">
     <details id="theme-menu-details">
-        <!--Change for an icon-->
         <summary>[T]</summary>
     </details>
     <div class="details-dropdown">
-        <div class="theme">
-            <label class="theme-label" for="grayscale-theme">Grayscale</label>
+        <div class="theme" data-theme="grayscale">
+            <span class="theme-label">Grayscale</span>
         </div>
-        <div class="theme">
-            <label class="theme-label" for="catppuccin-theme">Catppuccin</label>
+        <div class="theme" data-theme="catppuccin">
+            <span class="theme-label">Catppuccin</span>
         </div>
-        <div class="theme">
-            <label class="theme-label" for="gruvbox-theme">Gruvbox</label>
+        <div class="theme" data-theme="gruvbox">
+            <span class="theme-label">Gruvbox</span>
         </div>
-        <div class="theme">
-            <label class="theme-label" for="everforest-theme">Everforest</label>
+        <div class="theme" data-theme="everforest">
+            <span class="theme-label">Everforest</span>
         </div>
-        <div class="theme">
-            <label class="theme-label" for="terminal-theme">Terminal</label>
+        <div class="theme" data-theme="terminal">
+            <span class="theme-label">Terminal</span>
         </div>
     </div>
 </div>
