--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,8 @@
 		<meta name="description" content="{% if page.description %}{{ page.description }} {% endif %}{% assign excerpt = content | strip_html | truncate: 100, '' %}{{ excerpt }}">
 		<title>{{ page.title }}</title>
 		{% include general-style.html %}
-		{% include themes-style.html %}   
+		{% include theme-read.html %}
+		{% include themes-style.html %}
 		{% include trees-style.html %}
 		{% include post-style.html %}
 		{% include umami-analytics.html %}
@@ -26,7 +27,6 @@
 		{% endif %}
 	</head>
 	<body>
-		{% include themes-inputs.html %}
 		<div id="view">
 			<details id="mobile-sidebar-toggle">
 				<summary>
@@ -51,5 +51,6 @@
 				{{ content }}
 			</div>
 		</div>
+		<script src="../src/js/themes.js"></script>
 	</body>
 </html>
