impr: many small tweaks (mainly aesthetic)

--- a/_includes/trees.html
+++ b/_includes/trees.html
@@ -42,32 +42,13 @@
     </ul>
     <ul id="about-tree" class="tree">
         <details>
-            <summary>/about</summary>
+            <summary><a href="/about">/about</a></summary>
         </details>
-        <li>
-            <ul class="tree-parent">
-                <li>
-                    <a href="/about-me">about-me</a>
-                </li>
-                <li>
-                    <a href="/this-site">this-site</a>
-                </li>
-            </ul>
-        </li>
     </ul>
     <ul id="contact-tree" class="tree">
         <details>
-            <summary>/contact</summary>
+            <summary><a href="/contact">/contact</a></summary>
         </details>
-        <li>
-            <ul class="tree-parent">
-                <li>
-                    <a href="mailto:perseuslynx333@gmail.com">e-mail</a>
-                </li>
-                <li>
-                    <a href="discord://-/users/581902699247829046">discord</a>
-                </li>
-            </ul>
         </li>
     </ul>
 </div>
