--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -10,21 +10,6 @@
     padding-top: 4em;
     padding-bottom: 8em;
     margin: 0;
-    margin-left: 2em;
-}
-
-/* Changing order so that desktop-sidebar-toggle
-works and is after the sidebar */
-#desktop-sidebar-toggle {
-    order: 2;
-}
-
-#sidebar {
-    order: 1;
-}
-
-#content {
-    order: 3;
 }
 
 #mobile-sidebar-toggle {
@@ -34,23 +19,41 @@ works and is after the sidebar */
 #desktop-sidebar-toggle {
     display: block;
     position: sticky;
-    width: 0;
-    height: 0;
-    top: 4em;
     color: var(--current-dim-color);
-    margin-left: -2em;
+    top: 0;
+    height: 0;
+    .icn-regular {
+        display: block;
+        opacity: 0.1;
+        transition: 1s;
+    }
 }
+
+
 
 #desktop-sidebar-toggle:hover {
     color: var(--curent-text-color);
+    .icn-regular {
+        opacity: 1;
+        transition: 0.1s;
+    }
 }
 
 #desktop-sidebar-toggle > summary {
-    list-style-type: ">>";
+    width: fit-content;
+    padding: 2rem;
+    .icn-focus {
+        display: none;
+    }
 }
 
 #desktop-sidebar-toggle[open] > summary {
-    list-style-type: "<<";
+    .icn-focus {
+        display: block;
+    }
+    .icn-regular {
+        display: none;
+    }
 }
 
 #sidebar {
@@ -72,7 +75,7 @@ works and is after the sidebar */
     box-sizing: border-box;
 }
 
-#desktop-sidebar-toggle[open] ~ #sidebar {
+#desktop-sidebar-toggle[open] ~ #view #sidebar {
     max-width: 20ch;
     min-width: 20ch;
     transition: max-width 250ms ease-out, min-width 250ms ease-out;
@@ -89,6 +92,7 @@ works and is after the sidebar */
     overflow-y: auto;
     justify-self: stretch;
     max-height: 100%;
+    overflow-x: hidden;
 }
 
 #trees {
