impr: minor improvements (about, projects)

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -18,6 +18,7 @@
 .project-content {
     color: var(--current-dim-color);
     line-height: 1.5em;
+    font-family: var(--paragraph-font);
 }
 
 #content .title a {
